[package]
name = "tusq"
version = "0.1.0"
authors = ["Garrett Thornburg <film42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
bytes = "1.0.0"
futures = "0.3.8"
memchr = "2.3.4"
tokio = { version = "1.0.0", features = ["io-util", "net", "time"] }
