[package]
name = "tusq"
version = "0.1.0"
authors = ["Garrett Thornburg <film42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
bb8 = "0.7.0"
byteorder = "1.3.4"
bytes = "1.0.0"
futures = "0.3.8"
memchr = "2.3.4"
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync"] }
