[package]
name = "tusq"
version = "0.1.0"
authors = ["Garrett Thornburg <film42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
async-trait = "0.1.42"
bb8 = "0.7.0"
byteorder = "1.3.4"
bytes = "1.0.0"
env_logger = "0.8.2"
futures = "0.3.8"
log = "0.4.11"
md5 = "0.7.0"
memchr = "2.3.4"
serde = { version = "1.0.118", features = ["derive"] }
tokio = { version = "1.0.0", features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync", "signal"] }
waitgroup = "0.1.2"
